# sortrs

./: Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: lint.yml  security.yml  unit.yml
src/: bubblesort.rs  insertionsort.rs  lib.rs  main.rs  mergesort.rs  quicksort.rs  selectionsort.rs  sortrs.rs  stdsort.rs
